--- a/project/server/pom.xml
+++ b/project/server/pom.xml
@@ -98,6 +98,23 @@
             <version>3.0.5</version>
         </dependency>
 
+        <!--排列组合库-->
+        <dependency>
+            <groupId>org.raistlic.lib</groupId>
+            <artifactId>commons-core</artifactId>
+            <version>1.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>2.4.11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-jsr223</artifactId>
+            <version>2.4.11</version>
+        </dependency>
 
 
     </dependencies>
