--- a/project/client/bower.json
+++ b/project/client/bower.json
@@ -29,14 +29,12 @@
     "bootstrap-switch": "~3.3.2",
     "bootstrap-tagsinput": "~0.7.1",
     "font-awesome": "fontawesome#~4.7.0",
-
     "highlight": "~8.8.0",
     "moment": "~2.17.0",
     "slimScroll": "jquery-slimscroll#~1.3.6",
     "angular-progress-button-styles": "~0.1.0",
     "angular-ui-router": "~0.3.2",
     "ionrangeslider": "2.1.4",
-
     "angular-animate": "1.6.4",
     "textAngular": "~1.4.6",
     "angular-ui-select": "0.19.6",
@@ -64,8 +62,9 @@
     "datatables.net-rowreorder": "^1.2.0",
     "angular-datatables": "^2.3.0",
     "angular-bootstrap": "~1.3.3",
-    "w5c-validator": "angular-w5c-validator#^2.4.25"
-
+    "w5c-validator": "angular-w5c-validator#^2.4.25",
+    "json-viewer": "angular-json-viewer#^1.0.3",
+    "json-formatter": "^0.7.0"
   },
   "resolutions": {
     "angular": "~1.6.4",
@@ -89,7 +88,6 @@
     "slimScroll": {
       "main": "./jquery.slimscroll.js"
     },
-
     "font-awesome": {
       "main": [
         "css/font-awesome.css",
