--- a/project/server/src/main/resources/config/application.yml
+++ b/project/server/src/main/resources/config/application.yml
@@ -19,7 +19,7 @@ spring:
 
   datasource:
 
-      url: jdbc:mysql://59.110.12.232:3306/shushu?useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull
+      url: jdbc:mysql://localhost:3306/shushu?useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull
       username: admin
       password: 123456
       driverClassName:  com.mysql.jdbc.Driver
