--- a/project/server/src/main/resources/config/application.yml
+++ b/project/server/src/main/resources/config/application.yml
@@ -20,7 +20,7 @@ spring:
   datasource:
 
       url: jdbc:mysql://localhost:3306/shushu?useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull
-      username: admin
+      username: lzy
       password: 123456
       driverClassName:  com.mysql.jdbc.Driver
       tomcat:
