修改纳音取向

--- a/project/server/pom.xml
+++ b/project/server/pom.xml
@@ -111,9 +111,15 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.zxing</groupId>
+            <artifactId>core</artifactId>
+            <version>3.3.1</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.xiaoleilu</groupId>
             <artifactId>hutool-all</artifactId>
-            <version>3.0.5</version>
+            <version>3.2.2</version>
         </dependency>
 
         <!--排列组合库-->
