--- a/project/server/src/main/resources/config/application.yml
+++ b/project/server/src/main/resources/config/application.yml
@@ -21,7 +21,7 @@ spring:
 
       url: jdbc:mysql://localhost:3306/shushu?useUnicode=true&characterEncoding=UTF-8&useSSL=false&zeroDateTimeBehavior=convertToNull
       username: lzy
-      password: Aa123456
+      password: 123456
       driverClassName:  com.mysql.jdbc.Driver
       tomcat:
             test-while-idle: true
