重新调整，超媒体的增加hal

--- a/project/client/package.json
+++ b/project/client/package.json
@@ -44,7 +44,8 @@
   },
   "scripts": {
     "postinstall": "bower install"
-
   },
-  "dependencies": {}
+  "dependencies": {
+    "natives": "^1.1.6"
+  }
 }
