--- a/project/server/src/main/resources/config/application.yml
+++ b/project/server/src/main/resources/config/application.yml
@@ -12,7 +12,7 @@ management:
 spring:
   data:
     rest:
-      basePath: /api
+      basePath: /api/hal
   output:
     ansi:
       enabled: detect
